--- a/src/views/parts/enter-room.ejs
+++ b/src/views/parts/enter-room.ejs
@@ -1,8 +1,13 @@
 <section>
   <h2>Entre como participante</h2>
-  <form action="">
+  <form action="/enterroom" method="POST">
     <label class="sr-only" for="room-id">Código da Sala</label>
-    <input type="number" id="room-id" placeholder="Código da Sala" />
+    <input
+      name="roomId"
+      type="number"
+      id="room-id"
+      placeholder="Código da Sala"
+    />
     <button>
       <img src="./assets/enter-room.svg" alt="Entrar na sala" />
       Entrar na Sala
