--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -29,11 +29,11 @@
           <img src="/assets/logo.svg" alt="Rocket.Q Logo" />
         </a>
         <div class="buttons">
-          <div class="button outlined" id="room-id" data-id="323243">
-            #323243
+          <div class="button outlined" id="room-id" data-id="<%= roomId %>">
+            #<%= roomId %>
             <img src="/assets/copy.svg" alt="Copiar Número da Sala" />
           </div>
-          <a href="#" class="button">
+          <a href="/create-pass" class="button">
             <img src="/assets/users-white.svg" alt="Criar uma Sala" />
             Criar Sala
           </a>
@@ -43,7 +43,7 @@
       <main>
         <section id="question-forms">
           <h2>Faça sua pergunta</h2>
-          <form action="">
+          <form action="/question/create/<%= roomId%>" method="POST">
             <label for-id="question" class="sr-only"
               >O que você quer perguntar?</label
             >
@@ -68,62 +68,48 @@
           <h2 class="sr-only">Perguntas da Comunidade</h2>
 
           <div class="questions">
+            <% if(isNoQuestions){ %> <%- include('parts/no-question')%> <% } %>
+            <%questions.forEach(question => {%>
+
             <div class="question-wrapper">
               <div class="question-content">
                 <div class="user">
                   <img src="/assets/user-white.svg" alt="Avatar" />
                 </div>
                 <div class="question">
-                  <p>Qual a diferença entre const, var e let no JavaScript?</p>
+                  <p><%= question.titulo %></p>
                 </div>
               </div>
               <div class="actions">
-                <a href="#" class="check" data-id="2">
+                <a href="#" class="check" data-id="<%= question.id%>">
                   <img src="/assets/check.svg" alt="Marcar como Lida" />
                   Marcar como lida
                 </a>
-                <a href="#" class="delete" data-id="2">
+                <a href="#" class="delete" data-id="<%= question.id%>">
                   <img src="/assets/trash.svg" alt="Excluir" />
                   Excluir
                 </a>
               </div>
             </div>
-            <div class="question-wrapper">
-              <div class="question-content">
-                <div class="user">
-                  <img src="/assets/user-white.svg" alt="Avatar" />
-                </div>
-                <div class="question">
-                  <p>O que é Typescript?</p>
-                </div>
-              </div>
-              <div class="actions">
-                <a href="#" class="check" data-id="3">
-                  <img src="/assets/check.svg" alt="Marcar como Lida" />
-                  Marcar como lida
-                </a>
-                <a href="#" class="delete" data-id="3">
-                  <img src="/assets/trash.svg" alt="Excluir" />
-                  Excluir
-                </a>
-              </div>
-            </div>
+
+            <% }); %> <% questionRead.forEach(questionRead => {%>
             <div class="question-wrapper read">
               <div class="question-content">
                 <div class="user">
                   <img src="/assets/user-white.svg" alt="Avatar" />
                 </div>
                 <div class="question">
-                  <p>O que é JavaScript?</p>
+                  <p><%= questionRead.titulo%></p>
                 </div>
               </div>
               <div class="actions">
-                <a href="#" class="delete" data-id="1">
+                <a href="#" class="delete" data-id="<%= questionRead.id %>">
                   <img src="/assets/trash.svg" alt="Excluir" />
                   Excluir
                 </a>
               </div>
             </div>
+            <%}) %>
           </div>
         </section>
       </main>
